; ModuleID = '/home/carl/AnghaBench/php-src/ext/gd/libgd/extr_gd_bmp.c_gdBMPPutInt.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/gd/libgd/extr_gd_bmp.c_gdBMPPutInt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @gdBMPPutInt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gdBMPPutInt(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = and i32 %5, 255
  %7 = load i32*, i32** %3, align 8
  %8 = call i32 @gdPutC(i32 %6, i32* %7)
  %9 = load i32, i32* %4, align 4
  %10 = ashr i32 %9, 8
  %11 = and i32 %10, 255
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @gdPutC(i32 %11, i32* %12)
  %14 = load i32, i32* %4, align 4
  %15 = ashr i32 %14, 16
  %16 = and i32 %15, 255
  %17 = load i32*, i32** %3, align 8
  %18 = call i32 @gdPutC(i32 %16, i32* %17)
  %19 = load i32, i32* %4, align 4
  %20 = ashr i32 %19, 24
  %21 = and i32 %20, 255
  %22 = load i32*, i32** %3, align 8
  %23 = call i32 @gdPutC(i32 %21, i32* %22)
  ret i32 0
}

declare dso_local i32 @gdPutC(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
